--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,12 @@ body {
   margin: 0;
   padding: 0;
   font-weight: 600;
-  line-height: 1.5;
+  line-height: 1.25;
   font-size: 18px;
   letter-spacing: .1em;
   background: var(--gulfblue);
   color: var(--light);
-  font-family: 'system-ui', sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 
 }
 
@@ -55,7 +55,7 @@ h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 h2 {
